# llm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  KB_ENHANCEMENT_PROPOSAL.md  README.md  plan.md  pyproject.toml
config/: providers.yaml  settings.py
docs/modes/: README.md  agentic.md  ask.md  chat.md  code.md  creative.md  debug.md  execute.md  image.md  plan.md  research.md
scripts/: ingest.py  run.py
src/: __init__.py
src/agent/: __init__.py  agentic_loop.py  graph.py  modes.py  nodes.py  state.py
src/api/: __init__.py  main.py  routes.py
src/ingestion/: __init__.py  loaders.py  pipeline.py
src/knowledge/: __init__.py  grader.py  retriever.py  updater.py  vectorstore.py
src/llm/: __init__.py  local.py  selector.py
src/tools/: __init__.py  bash.py  image.py  registry.py  web.py
