[project]
name = "llm-agent"
version = "0.6.0"
description = "Local-first LLM agent with RAG-based knowledge base and intelligent fallback"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tyrel" }]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.4.0",
    "litellm>=1.50.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "prompt_toolkit>=3.0.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
web = [
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
llm-agent = "scripts.run:main"
llm-ingest = "scripts.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config", "scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
